--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .container{
     background-color: orange;
-    padding-bottom: 20px;
-    min-height: 200vh;
+    padding: 0;
+    min-height: 100vh;
+    max-width: 1600px;
+    margin: 0;
 }
 .headName{
     color: indigo;
@@ -27,6 +29,9 @@
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+}
+footer{
+    bottom: 0;
 }
 
 
