--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     background-color: orange;
     padding: 0;
     min-height: 100vh;
-    max-width: 1600px;
+    max-width: 1600px auto;
     margin: 0;
 }
 .headName{
