--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
+body{
+    background: orange;
+}
 .container{
-    background-color: orange;
     padding: 0;
     min-height: 100vh;
-    max-width: 1600px auto;
+    max-width: 1600px;
     margin: 0;
 }
 .headName{
